--- a/src/pages/topic/topic.html
+++ b/src/pages/topic/topic.html
@@ -16,7 +16,7 @@
 <ion-content padding>
   <ion-list>
   <button ion-item *ngFor="let topic of topics" (click)="topicSelected(topic)">
-    {{ topic.topicName }}
+    {{ topic.name }}
   </button>  
 </ion-list>
   <ion-fab bottom right>
