two new pages, new features

--- a/src/pages/hard-detail/hard-detail.html
+++ b/src/pages/hard-detail/hard-detail.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the CardDetail page.
+  Generated template for the HardDetail page.
 
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Easy Detail Page</ion-title>
+    <ion-title>Hard Detail Page</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -20,16 +20,15 @@
     <h2></h2>
     <input *ngIf="toEdit" placeholder="Peter"/>
   </div>
-  
   <div>
     <h1 *ngIf="!toEdit">Answer</h1>
     <h2></h2>
     <input *ngIf="toEdit" placeholder="Peter"/>
   </div>
 
-
   <ion-fab bottom right>
     <button ion-fab (click)="Edit()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
+
 
 </ion-content>
