--- a/src/pages/medium-detail/medium-detail.html
+++ b/src/pages/medium-detail/medium-detail.html
@@ -18,17 +18,15 @@
   <div>
     <h1 *ngIf="!toEdit">Question</h1>
     <h2></h2>
-    <input *ngIf="toEdit" placeholder="Peter"/>
+    <input *ngIf="toEdit" [(ngModel)]="newMediumCard.mediumThemeQuestion" placeholder="Question"/>
   </div>
   <div>
     <h1 *ngIf="!toEdit">Answer</h1>
     <h2></h2>
-    <input *ngIf="toEdit" placeholder="Peter"/>
+    <input *ngIf="toEdit" [(ngModel)]="newMediumCard.mediumThemeAnswer" placeholder="Answer"/>
   </div>
   
-  <div>
-    <button *ngIf="toEdit" ion-button (click)="Save()">Save</button>
-  </div>
+  <button  ion-button *ngIf="toEdit" (click)=' addMediumCard()' block>Sign In</button>
 
   <ion-fab bottom right>
     <button ion-fab (click)="Edit()"><ion-icon name="add"></ion-icon></button>
