--- a/src/pages/card-detail/card-detail.html
+++ b/src/pages/card-detail/card-detail.html
@@ -15,22 +15,19 @@
 
 <ion-content padding>
 
-   <div>
-    <h1 *ngIf="!toEdit">Question</h1>
-    <h2></h2>
-    <input *ngIf="toEdit" [(ngModel)]="newEasyCard.easyThemeQuestion" placeholder="Peter"/>
-  </div>
+
+    <ion-item>
+    <ion-label fixed>Question</ion-label>
+    <ion-input  [(ngModel)]="newEasyCard.easyThemeQuestion" ></ion-input>
+    </ion-item>
   
-  <div>
-    <h1 *ngIf="!toEdit">Answer</h1>
-    <h2></h2>
-    <input *ngIf="toEdit" [(ngModel)]="newEasyCard.easyThemeAnswer" placeholder="Peter"/>
-  </div>
-  <button  ion-button *ngIf="toEdit" (click)='addEasyCard()' block>Sign In</button>
+  
+    
+    <ion-item>
+    <ion-label fixed>Answer</ion-label>
+    <ion-input  [(ngModel)]="newEasyCard.easyThemeAnswer" ></ion-input>
+    </ion-item>
 
-
-  <ion-fab bottom right>
-    <button ion-fab (click)="Edit()"><ion-icon name="add"></ion-icon></button>
-  </ion-fab>
+  <button ion-button class="Button"  (click)="addEasyCard()" block>Sign In</button>
 
 </ion-content>
