--- a/src/pages/hard-detail/hard-detail.html
+++ b/src/pages/hard-detail/hard-detail.html
@@ -15,22 +15,20 @@
 
 <ion-content padding>
 
-   <div>
-    <h1 *ngIf="!toEdit">Question</h1>
-    <h2></h2>
-    <input *ngIf="toEdit" [(ngModel)]="newHardCard.hardThemeQuestion" placeholder="Peter"/>
-  </div>
-  <div>
-    <h1 *ngIf="!toEdit">Answer</h1>
-    <h2></h2>
-    <input *ngIf="toEdit" [(ngModel)]="newHardCard.hardThemeAnswer" placeholder="Peter"/>
-  </div>
 
-  <button  ion-button *ngIf="toEdit" (click)='addHardCard()' block>Sign In</button>
+  <ion-item>
+    <ion-label fixed>Question</ion-label>
+    <ion-input [(ngModel)]="newHardCard.hardThemeQuestion" ></ion-input>
+  </ion-item>
 
-  <ion-fab bottom right>
-    <button ion-fab (click)="Edit()"><ion-icon name="add"></ion-icon></button>
-  </ion-fab>
 
+  <ion-item>
+    <ion-label fixed>Answer</ion-label>
+    <ion-input [(ngModel)]="newHardCard.hardThemeAnswer" ></ion-input>
+  </ion-item>
+
+    
+
+  <button  ion-button class="Button" (click)="addHardCard()" block>Sign In</button>
 
 </ion-content>
