--- a/src/pages/topic-detail/topic-detail.html
+++ b/src/pages/topic-detail/topic-detail.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>topicDetail</ion-title>
+    <ion-title>Add new topic</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,7 +16,12 @@
 <ion-content padding>
 
   <h3>New Topic</h3>
-  <ion-input placeholder="Topic" [(ngModel)]="newTopic.topicName"></ion-input>
-  <button ion-button (click)="saveTopic(topic.topicName)">Save</button>
+
+  <ion-item>
+    <ion-label fixed>Topic</ion-label>
+    <ion-input [(ngModel)]="newTopic.name" ></ion-input>
+  </ion-item>
+
+  <button class="Button" ion-button full (click)="saveTopic()">Save</button>
 
 </ion-content>
