--- a/src/pages/topic/topic.html
+++ b/src/pages/topic/topic.html
@@ -13,14 +13,12 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="buttons-components-page">
   <ion-list>
   <ion-item ion-item *ngFor="let topic of topics" (click)="topicSelected(topic)">
-    {{ topic.topicName }}
-    <button> - </button>
+    {{ topic.name }}
+      <ion-icon color="danger" class="deletSymbol" item-right (Click)="deleteTopic()" name="ios-trash"></ion-icon>      
   </ion-item>
-
-
 </ion-list>
   <ion-fab bottom right>
     <button ion-fab (click)="newTopic()"><ion-icon name="add"></ion-icon></button>
